--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 300px;
+            width: 90%;
+            max-width: 400px;
             text-align: center;
         }
         button {
@@ -62,16 +63,16 @@
             display: block;
         }
         .popup .title {
-            font-size: 24px;
+            font-size: 22px;
             font-weight: bold;
             margin-bottom: 10px;
         }
         .popup .message {
             margin-bottom: 20px;
-            font-size: 18px;
+            font-size: 16px;
         }
         .popup .checkmark {
-            font-size: 100px;
+            font-size: 80px;
             color: #28a745;
             margin-bottom: 20px;
         }
@@ -94,7 +95,8 @@
             top: 20%;
             left: 50%;
             transform: translateX(-50%);
-            width: 300px;
+            width: 90%;
+            max-width: 400px;
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             border-radius: 8px;
@@ -114,6 +116,23 @@
         }
         #welcome-popup button:hover {
             background-color: #218838;
+        }
+
+        /* Responsive design for smaller screens */
+        @media (max-width: 600px) {
+            .popup .title {
+                font-size: 20px;
+            }
+            .popup .message {
+                font-size: 14px;
+            }
+            .popup .checkmark {
+                font-size: 60px;
+            }
+            button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
         }
     </style>
 </head>
