--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!-- Welcome Popup -->
     <div id="welcome-popup">
         <h1>Welcome!</h1>
-        <p>We're glad to have you here. Click the button below to explore our drink selection.</p>
+        <p>We're glad to have you here. Click the button below to explore our drinks selection and order as you please!</p>
         <button id="explore-button">Explore Drink Selection</button>
     </div>
 
