--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Please take this: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,8 +21,7 @@ Please take this: <!DOCTYPE html>
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            width: 90%;
-            max-width: 400px;
+            width: 300px;
             text-align: center;
         }
         button {
@@ -63,16 +62,16 @@ Please take this: <!DOCTYPE html>
             display: block;
         }
         .popup .title {
-            font-size: 22px;
+            font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
         }
         .popup .message {
             margin-bottom: 20px;
-            font-size: 16px;
+            font-size: 18px;
         }
         .popup .checkmark {
-            font-size: 80px;
+            font-size: 100px;
             color: #28a745;
             margin-bottom: 20px;
         }
@@ -95,8 +94,7 @@ Please take this: <!DOCTYPE html>
             top: 20%;
             left: 50%;
             transform: translateX(-50%);
-            width: 90%;
-            max-width: 400px;
+            width: 300px;
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
             border-radius: 8px;
@@ -116,23 +114,6 @@ Please take this: <!DOCTYPE html>
         }
         #welcome-popup button:hover {
             background-color: #218838;
-        }
-
-        /* Responsive design for smaller screens */
-        @media (max-width: 600px) {
-            .popup .title {
-                font-size: 20px;
-            }
-            .popup .message {
-                font-size: 14px;
-            }
-            .popup .checkmark {
-                font-size: 60px;
-            }
-            button {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
         }
     </style>
 </head>
@@ -313,4 +294,4 @@ Please take this: <!DOCTYPE html>
         setInterval(checkOrderStatus, 5000); // Check every 5 seconds
     </script>
 </body>
-</html> and do the following: Please make it so when the explore drink selection is clicked it shows a loading screen until the audio is over make it so it says loading assets and then shows how many seconds left
+</html>
