--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                 if (error) {
                     if (error.code === 'PGRST116') {
                         // Treat PGRST116 error as a completed order
+                        document.Title = "Your order is complete"
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
                             playSound(); // Play sound for completed
@@ -266,6 +267,7 @@
 
                 if (order) {
                     if (order.status === 'inprogress') {
+                       document.Title = 'Order in progress" 
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
                             playSound(); // Play sound for in progress
