--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                 if (order) {
                     if (order.status === 'inprogress') {
-                       document.title = 'Order in progress" 
+                       document.title = "Order in progress" 
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
                             playSound(); // Play sound for in progress
