--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Welcome Popup -->
     <div id="welcome-popup">
         <h1>Welcome!</h1>
-        <p>We're glad to have you here. Click the button below to explore our drink selection.</p>
+        <p>We're glad to have you here at Steve and Stacy's Year End Party. Click the button below to explore our drink selection.</p>
         <button id="explore-button">Explore Drink Selection</button>
     </div>
 
