--- a/index.html
+++ b/index.html
@@ -178,16 +178,20 @@
         <button id="back-to-menu-button">Back to Menu</button>
     </div>
 
-    <div id="order-form">
-        <h2>Order Form</h2>
-        <form id="drink-form">
-            <label for="drink">Select Drink:</label>
-            <select id="drink" name="drink"></select>
-            <button type="submit">Place Order</button>
-        </form>
-        <p id="order-message"></p>
-        <button id="close-form-button">Close</button>
-    </div>
+  <!-- Updated Order Form -->
+<div id="order-form">
+    <h2>Order Form</h2>
+    <form id="drink-form">
+        <label for="drink">Select Drink:</label>
+        <select id="drink" name="drink"></select>
+        <label for="user-name">Your Name:</label>
+        <input type="text" id="user-name" name="user-name" required />
+        <button type="submit">Place Order</button>
+    </form>
+    <p id="order-message"></p>
+    <button id="close-form-button">Close</button>
+</div>
+
 
     <!-- Popup notifications -->
     <div id="success-popup" class="popup">
@@ -209,185 +213,186 @@
 
     <audio id="sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
     <audio id="welcome" src="advertising-logo-199582.mp3" preload="auto"></audio>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script>
-        // Initialize Supabase
-        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-        const sound = document.getElementById('sound');
-        const welcome = document.getElementById('welcome');
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script>
+    // Initialize Supabase
+    const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
+    const sound = document.getElementById('sound');
+    const welcome = document.getElementById('welcome');
 
-        let drinksData = [];
+    let drinksData = [];
 
-        document.getElementById('explore-button').addEventListener('click', async () => {
-            document.getElementById('welcome-popup').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
-            welcome.play();
+    document.getElementById('explore-button').addEventListener('click', async () => {
+        document.getElementById('welcome-popup').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+        welcome.play();
 
-            await fetchDrinks();
-            renderDrinkCards();
+        await fetchDrinks();
+        renderDrinkCards();
+    });
+
+    async function fetchDrinks() {
+        const { data, error } = await supabase
+            .from('drinks')
+            .select('*');
+
+        if (error) {
+            console.error('Error fetching drinks:', error);
+            return;
+        }
+
+        drinksData = data;
+    }
+
+    function renderDrinkCards() {
+        const drinkCardsContainer = document.getElementById('drink-cards');
+        drinkCardsContainer.innerHTML = '';
+
+        drinksData.forEach(drink => {
+            const card = document.createElement('div');
+            card.className = 'drink-card';
+            card.innerHTML = `
+                <h3>${drink.name}</h3>
+                <p>${drink.description.substring(0, 50)}...</p>
+                <button onclick="viewDrink('${drink.name}')">View this Drink</button>
+            `;
+            drinkCardsContainer.appendChild(card);
         });
+    }
 
-        async function fetchDrinks() {
-            const { data, error } = await supabase
-                .from('drinks')
-                .select('*');
+    function viewDrink(drinkName) {
+        const drink = drinksData.find(d => d.name === drinkName);
+        if (drink) {
+            document.getElementById('drink-name').innerText = drink.name;
+            document.getElementById('drink-description').innerText = `Description: ${drink.description}`;
+            document.getElementById('drink-ingredients').innerText = `Ingredients: ${drink.ingredients}`;
+            document.getElementById('drink-details').style.display = 'block';
+            document.getElementById('menu').style.display = 'none';
+        }
+    }
 
-            if (error) {
-                console.error('Error fetching drinks:', error);
-                return;
+    document.getElementById('back-to-menu-button').addEventListener('click', () => {
+        document.getElementById('drink-details').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+    });
+
+    document.getElementById('order-drink-button').addEventListener('click', () => {
+        const selectedDrink = document.getElementById('drink-name').innerText;
+        populateDrinkDropdown(selectedDrink);
+        document.getElementById('drink-details').style.display = 'none';
+        document.getElementById('order-form').style.display = 'block';
+    });
+
+    function populateDrinkDropdown(selectedDrink) {
+        const drinkSelect = document.getElementById('drink');
+        drinkSelect.innerHTML = '';
+        drinksData.forEach(drink => {
+            const option = document.createElement('option');
+            option.value = drink.name;
+            option.text = drink.name;
+            if (drink.name === selectedDrink) {
+                option.selected = true;
             }
-
-            drinksData = data;
-        }
-
-        function renderDrinkCards() {
-            const drinkCardsContainer = document.getElementById('drink-cards');
-            drinkCardsContainer.innerHTML = '';
-
-            drinksData.forEach(drink => {
-                const card = document.createElement('div');
-                card.className = 'drink-card';
-                card.innerHTML = `
-                    <h3>${drink.name}</h3>
-                    <p>${drink.description.substring(0, 50)}...</p>
-                    <button onclick="viewDrink('${drink.name}')">View this Drink</button>
-                `;
-                drinkCardsContainer.appendChild(card);
-            });
-        }
-
-        function viewDrink(drinkName) {
-            const drink = drinksData.find(d => d.name === drinkName);
-            if (drink) {
-                document.getElementById('drink-name').innerText = drink.name;
-                document.getElementById('drink-description').innerText = `Description: ${drink.description}`;
-                document.getElementById('drink-ingredients').innerText = `Ingredients: ${drink.ingredients}`;
-                document.getElementById('drink-details').style.display = 'block';
-                document.getElementById('menu').style.display = 'none';
-            }
-        }
-
-        document.getElementById('back-to-menu-button').addEventListener('click', () => {
-            document.getElementById('drink-details').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
+            drinkSelect.appendChild(option);
         });
+    }
 
-        document.getElementById('order-drink-button').addEventListener('click', () => {
-            const selectedDrink = document.getElementById('drink-name').innerText;
-            populateDrinkDropdown(selectedDrink);
-            document.getElementById('drink-details').style.display = 'none';
-            document.getElementById('order-form').style.display = 'block';
-        });
+    document.getElementById('drink-form').addEventListener('submit', async (event) => {
+        event.preventDefault();
 
-        function populateDrinkDropdown(selectedDrink) {
-            const drinkSelect = document.getElementById('drink');
-            drinkSelect.innerHTML = '';
-            drinksData.forEach(drink => {
-                const option = document.createElement('option');
-                option.value = drink.name;
-                option.text = drink.name;
-                if (drink.name === selectedDrink) {
-                    option.selected = true;
-                }
-                drinkSelect.appendChild(option);
-            });
+        const drink = document.getElementById('drink').value;
+        const userName = document.getElementById('user-name').value;
+        const userId = crypto.randomUUID(); // Generate a unique user identifier
+        const orderId = Math.floor(1000 + Math.random() * 9000); // Generate a 4-digit ID
+
+        const { data, error } = await supabase
+            .from('orders')
+            .insert([{ id: orderId, drink, status: 'pending', user_id: userId, user_name: userName }]);
+
+        if (error) {
+            console.error(error);
+            document.getElementById('order-message').innerText = 'Error placing order!';
+            return;
         }
 
-        document.getElementById('drink-form').addEventListener('submit', async (event) => {
-            event.preventDefault();
-            const drink = document.getElementById('drink').value;
-            const id = Math.floor(1000 + Math.random() * 9000); // Generate a 4-digit ID
+        localStorage.setItem('orderId', orderId);
+        localStorage.setItem('pendingNotify', 'true'); // Set pendingNotify to true
+        document.getElementById('order-id').innerText = orderId;
+        showPopup('success-popup');
+    });
 
-            const { data, error } = await supabase
+    document.getElementById('close-form-button').addEventListener('click', () => {
+        document.getElementById('order-form').style.display = 'none';
+        document.getElementById('menu').style.display = 'block';
+    });
+
+    function showPopup(popupId) {
+        const popup = document.getElementById(popupId);
+        if (popup) {
+            popup.classList.add('show');
+        }
+    }
+
+    function closePopup(popupId) {
+        const popup = document.getElementById(popupId);
+        if (popup) {
+            popup.classList.remove('show');
+        }
+    }
+
+    // Poll for order status
+    async function checkOrderStatus() {
+        const userOrderId = localStorage.getItem('orderId');
+        if (userOrderId) {
+            const { data: order, error } = await supabase
                 .from('orders')
-                .insert([{ id, drink, status: 'pending' }]);
+                .select('*')
+                .eq('id', userOrderId)
+                .single();
 
             if (error) {
-                console.error(error);
-                document.getElementById('order-message').innerText = 'Error placing order!';
+                if (error.code === 'PGRST116' && !localStorage.getItem(`completeNotify_${userOrderId}`)) {
+                    // Handle the not found error as a completed order
+                    localStorage.setItem(`completeNotify_${userOrderId}`, 'true');
+                    playSound(); // Play sound for completed
+                    showPopup('completed-popup');
+                    localStorage.removeItem('orderId');
+                    localStorage.removeItem('pendingNotify');
+                    localStorage.removeItem('inprogressNotify');
+                    localStorage.removeItem(`completeNotify_${userOrderId}`);
+                } else {
+                    console.error(error);
+                }
                 return;
             }
 
-            localStorage.setItem('orderId', id);
-            localStorage.setItem('pendingNotify', 'true'); // Set pendingNotify to true
-            document.getElementById('order-id').innerText = id;
-            showPopup('success-popup');
-        });
-
-        document.getElementById('close-form-button').addEventListener('click', () => {
-            document.getElementById('order-form').style.display = 'none';
-            document.getElementById('menu').style.display = 'block';
-        });
-
-        function showPopup(popupId) {
-            const popup = document.getElementById(popupId);
-            if (popup) {
-                popup.classList.add('show');
-            }
-        }
-
-        function closePopup(popupId) {
-            const popup = document.getElementById(popupId);
-            if (popup) {
-                popup.classList.remove('show');
-            }
-        }
-
-        // Poll for order status
-        async function checkOrderStatus() {
-            const userOrderId = localStorage.getItem('orderId');
-            if (userOrderId) {
-                const { data: order, error } = await supabase
-                    .from('orders')
-                    .select('*')
-                    .eq('id', userOrderId)
-                    .single();
-
-                if (error) {
-                    if (error.code === 'PGRST116' && !localStorage.getItem(`completeNotify_${userOrderId}`)) {
-                        // Handle the not found error as a completed order
-                        localStorage.setItem(`completeNotify_${userOrderId}`, 'true');
-                        playSound(); // Play sound for completed
-                        showPopup('completed-popup');
-                        localStorage.removeItem('orderId');
-                        localStorage.removeItem('pendingNotify');
-                        localStorage.removeItem('inprogressNotify');
-                        localStorage.removeItem(`completeNotify_${userOrderId}`);
-                    } else {
-                        console.error(error);
+            if (order) {
+                if (order.status === 'inprogress') {
+                    document.title = "Order in progress";
+                    if (!localStorage.getItem('inprogressNotify')) {
+                        localStorage.setItem('inprogressNotify', 'true');
+                        playSound(); // Play sound for in progress
+                        showPopup('inprogress-popup');
                     }
-                    return;
-                }
-
-                if (order) {
-                    if (order.status === 'inprogress') {
-                        document.title = "Order in progress";
-                        if (!localStorage.getItem('inprogressNotify')) {
-                            localStorage.setItem('inprogressNotify', 'true');
-                            playSound(); // Play sound for in progress
-                            showPopup('inprogress-popup');
-                        }
-                    } else if (order.status === 'completed' && !localStorage.getItem(`completeNotify_${userOrderId}`)) {
-                        localStorage.setItem(`completeNotify_${userOrderId}`, 'true');
-                        playSound(); // Play sound for completed
-                        showPopup('completed-popup');
-                        localStorage.removeItem('orderId');
-                        localStorage.removeItem('pendingNotify');
-                        localStorage.removeItem('inprogressNotify');
-                        localStorage.removeItem(`completeNotify_${userOrderId}`);
-                    }
+                } else if (order.status === 'completed' && !localStorage.getItem(`completeNotify_${userOrderId}`)) {
+                    localStorage.setItem(`completeNotify_${userOrderId}`, 'true');
+                    playSound(); // Play sound for completed
+                    showPopup('completed-popup');
+                    localStorage.removeItem('orderId');
+                    localStorage.removeItem('pendingNotify');
+                    localStorage.removeItem('inprogressNotify');
+                    localStorage.removeItem(`completeNotify_${userOrderId}`);
                 }
             }
         }
+    }
 
-        function playSound() {
-            // Ensure the sound is played by a user interaction
-            sound.play().catch(error => {
-                console.error('Failed to play sound:', error);
-            });
-        }
+    function playSound() {
+        // Ensure the sound is played by a user interaction
+        sound.play().catch(error => {
+            console.error('Failed to play sound:', error);
+        });
+    }
 
-        setInterval(checkOrderStatus, 5000); // Check every 5 seconds
-    </script>
-</body>
-</html>
+    setInterval(checkOrderStatus, 5000); // Check every 5 seconds
+</script>
