--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <audio id="sound" src="225661-ComputerSFX-alerts-071.wav" preload="auto"></audio>
     <audio id="welcome" src="advertising-logo-199582.mp3" preload="auto"></audio>
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script>
     // Initialize Supabase
     const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
@@ -357,6 +357,8 @@
                             localStorage.setItem('completeNotify', 'true');
                             playSound(); // Play sound for completed
                             showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
                             // Remove the completed order ID
                             removeOrderFromLocalStorage(userOrderId);
                         }
@@ -378,6 +380,8 @@
                             localStorage.setItem('completeNotify', 'true');
                             playSound(); // Play sound for completed
                             showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
                             removeOrderFromLocalStorage(userOrderId);
                         }
                     }
@@ -393,10 +397,12 @@
             localStorage.setItem('orderIds', JSON.stringify(orderIds));
         } else {
             localStorage.removeItem('orderIds');
-            localStorage.removeItem('pendingNotify');
-            localStorage.removeItem('inprogressNotify');
-            localStorage.removeItem('completeNotify');
         }
+    }
+
+    function resetNotificationFlags() {
+        localStorage.removeItem('inprogressNotify');
+        localStorage.removeItem('completeNotify');
     }
 
     function playSound() {
@@ -408,3 +414,5 @@
 
     setInterval(checkOrderStatus, 5000); // Check every 5 seconds
 </script>
+</body>
+</html>
