--- a/staffpos1.html
+++ b/staffpos1.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
-            background-color: f7efff;
+            background-color: #f7efff;
             color: #333;
         }
         #order-list, #order-details {
